crates/sdk/macros/tests/ui/validator_size_range_non_collection_fail.stderr
error: `size_range(...)` requires `Vec<T>` or `Option<Vec<T>>` fields
 --> tests/ui/validator_size_range_non_collection_fail.rs:6:12
  |
6 |     count: u32,
  |            ^^^
